# human-language-toolkit-chatbot

./: Cargo.toml  README.md
bots/: eliza.json  spanish.json  suntsu.json
src/: bots.rs  lib.rs
